media query updated

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
     </div>
   </section>
   <div class="container information-section">
-    <div class="container d-flex justify-content-center">
+    <div class=" flex-row d-flex justify-content-between">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" id="info-box">
+        <div class="info-box-fix col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3"  id="info-box">
           <img class="info-img" src="images/ICON/book.png" alt="">
           <h6 class="info-h6">1500+ Topic</h6>
           <p class="info-para">Learn Anythings</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" id="info-box">
+        <div class="info-box-fix col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" id="info-box">
           <img  class="info-img" src="images/ICON/Student.png" alt="">
           <h6 class="info-h6">1800+ Students</h6>
           <p class="info-para">Learn Anythings</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" id="info-box">
+        <div class="info-box-fix col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3" id="info-box">
           <img  class="info-img" src="images/ICON/Test.png" alt="">
           <h6 class="info-h6">9K+ Test Token</h6>
           <p class="info-para">Learn Anythings</p>
